appview: fix raw link
oops

--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -42,7 +42,7 @@
                 <span class="select-none px-1 md:px-2 [&:before]:content-['·']"></span>
                 <span>{{ byteFmt .SizeHint }}</span>
                 <span class="select-none px-1 md:px-2 [&:before]:content-['·']"></span>
-                <a href="/{{ .RepoInfo.FullName }}/blob/raw/{{ .Ref }}/{{ .Path }}">view raw</a>
+                <a href="/{{ .RepoInfo.FullName }}/blob/{{ .Ref }}/raw/{{ .Path }}">view raw</a>
             </div>
         </div>
     </div>
