--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -18,8 +18,8 @@
     {{ $linkstyle := "no-underline hover:underline" }}
 
     <div class="pb-2 mb-3 text-base border-b border-gray-200">
-      <div class="flex justify-between">
-        <div id="breadcrumbs">
+      <div class="flex flex-col md:flex-row md:justify-between gap-2">
+        <div id="breadcrumbs" class="overflow-x-auto whitespace-nowrap">
           {{ range .BreadCrumbs }}
           <a href="{{ index . 1}}" class="text-bold text-gray-500 {{ $linkstyle }}">{{ index . 0 }}</a> /
           {{ end }}
